<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:strokeWidth="0dp"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/white"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/white">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textAlignment="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/change_language"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:alpha="0.2"
            android:layout_marginTop="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/okay_language_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/okay"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="14sp"
                app:strokeWidth="0dp"
                app:cornerRadius="0dp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/black"
                android:alpha="0.2"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_language_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="14sp"
                app:strokeWidth="0dp"
                app:cornerRadius="0dp"/>
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>