<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.fragments.auth.signIn.SignInFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_logo" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_code_picker"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:ccp_textSize="14sp"
                    app:ccp_defaultPhoneCode="20"
                    app:ccp_showNameCode="false"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_edite_text_field"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    app:errorEnabled="true"
                    android:layout_gravity="center"
                    app:placeholderText="ex.1091021133"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        android:textColorHint="@color/hint_color"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/text_mobile_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:visibility="gone"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginStart="15dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/mobile_layout"
                app:layout_constraintStart_toStartOf="@+id/mobile_layout"
                app:layout_constraintTop_toTopOf="@+id/mobile_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edite_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/hint_color"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:cornerRadius="14dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/create_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>