<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.fragments.auth.verificationAccount.VerificationAccountFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <ImageButton
            android:id="@+id/image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:background="@android:color/transparent"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verification_code"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="24sp"
            android:layout_marginTop="64dp"
            android:textColor="@color/black" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/otp_sent_to"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/hint_color"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:id="@+id/text_view_mobile_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:text=" +200123456789"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.otpview.OTPTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="46dp"
            android:layout_gravity="center"
            app:otp_text_size="20sp"
            app:otp_box_background="@drawable/bg_otp_box"
            app:otp_box_background_active="@drawable/bg_otp_box_active"
            app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
            app:otp_box_background_error="@drawable/bg_otp_box_error"
            app:otp_box_background_success="@drawable/bg_otp_box_success"
            app:hide_otp_drawable="@drawable/bg_otp_box_hide"
            app:box_margin="6dp"
            app:hide_otp="false"
            app:length="6"
            app:otp=""/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/verify"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:cornerRadius="14dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/resend_otp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/resend_otp_in"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/hint_color"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:id="@+id/text_view_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:text=" 30 "
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@color/hint_color"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sec"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/hint_color"
                android:fontFamily="@font/poppins_medium"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>