<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.signUp.SignUpFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

    <ImageButton
        android:id="@+id/image_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:background="@android:color/transparent"
        android:layout_marginTop="12dp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_logo" />


        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:paddingTop="10dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/linear_border_background_unselected">
            <com.hbb20.CountryCodePicker
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                app:ccp_textSize="14sp"
                app:ccp_defaultPhoneCode="20"
                app:ccp_showNameCode="false"/>
            <EditText
                android:id="@+id/mobile_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:textSize="14sp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:hint="@string/mobile"
                android:textColorHint="@color/hint_color"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/text_mobile_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="gone"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginStart="15dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/mobile_layout"
            app:layout_constraintStart_toStartOf="@+id/mobile_layout"
            app:layout_constraintTop_toTopOf="@+id/mobile_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edite_text_field"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_edite_text_field"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:cornerRadius="14dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/already_have_an_account"/>
            <TextView
                android:id="@+id/text_view_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/login"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>