<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.auth.onBoarding.OnBoardingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/skip_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/skip"
            android:textColor="@color/primary_color"
            android:textSize="13sp"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/language_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_language" />
    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboarding_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/view_pager_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:dotsColor="@color/second_color"
        app:dotsCornerRadius="8dp"
        app:dotsSize="10dp"
        app:dotsSpacing="3dp"
        app:progressMode="true"
        app:selectedDotColor="@color/primary_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary_color"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:cornerRadius="14dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />


</androidx.appcompat.widget.LinearLayoutCompat>